--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "log-exporter",
   "version": "1.0.0",
   "description": "Dependency for export log of console navigator",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "./src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Cristian024/log-exporter.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "log-exporter"
+  ],
+  "author": "Cristian David Robledo León",
+  "license": "MIT"
 }
